--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,9 +1,11 @@
 ---
 galaxy_info:
   role_name: arduino-patch-platform
+  namespace: MXPicture
   author: Tobias Bildner
   description: "Removes -w from platform.txt in Arduino cores"
   dependencies: []
+
 
   # If the issue tracker for your role is not on github, uncomment the
   # next line and provide a value
