--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -26,7 +26,8 @@
   loop_control:
     label: "{{ item.path }}"
 
-- name: Warn about unexpected warning flags
+# compiler.warning_flags=-w
+- name: Warn about unexpected warning flags (compiler.warning_flags=-w)
   vars:
     decoded: "{{ item.content | b64decode }}"
     warning_line: "{{ decoded.splitlines() | select('match', '^compiler\\.warning_flags=') | list }}"
@@ -47,6 +48,35 @@
     path: "{{ item.path }}"
     regexp: '^compiler\.warning_flags=-w$'
     line: 'compiler.warning_flags='
+    backup: false
+    state: present
+  loop: "{{ platform_txt_files.files }}"
+  when: arduino_patch_mode == 'patch'
+  loop_control:
+    label: "{{ item.path }}"
+
+# compiler.warning_flags.none=-w
+- name: Warn about unexpected warning flags (compiler.warning_flags.none=-w)
+  vars:
+    decoded: "{{ item.content | b64decode }}"
+    warning_line: "{{ decoded.splitlines() | select('match', '^compiler\\.warning_flags\\.none=') | list }}"
+  when: >
+    warning_line | length > 0 and
+    warning_line[0] != 'compiler.warning_flags.none=' and
+    warning_line[0] != 'compiler.warning_flags.none=-w'
+  debug:
+    msg: >
+      ⚠️ Unexpected compiler.warning_flags.none in {{ item.invocation.module_args.src }}:
+      {{ warning_line[0] }}
+  loop: "{{ slurped_platforms.results }}"
+  loop_control:
+    label: "{{ item.invocation.module_args.src }}"
+
+- name: Replace exact line 'compiler.warning_flags.none=-w'
+  lineinfile:
+    path: "{{ item.path }}"
+    regexp: '^compiler\.warning_flags.none=-w$'
+    line: 'compiler.warning_flags.none='
     backup: false
     state: present
   loop: "{{ platform_txt_files.files }}"
