--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,7 +1,7 @@
 ---
 galaxy_info:
   role_name: arduino_patch_platform
-  namespace: mxpicture
+  namespace: MXPicture
   author: Tobias Bildner
   description: "Removes -w from platform.txt in Arduino cores"
 
